--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,15 +2,10 @@ name: Deploy (Nexus)
 on:
   push:
     branches: [ "main" ]
+  workflow_dispatch: {}
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, prod]
     steps:
-      - name: SSH and run deploy script
-        uses: appleboy/ssh-action@v1.1.0
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            bash /home/widson/Projetos/Nexus/deploy/deploy.sh
+      - name: Deploy via script local
+        run: bash /home/widson/Projetos/Nexus/deploy/deploy.sh
